--- a/toolkit/content/customizeToolbar.css
+++ b/toolkit/content/customizeToolbar.css
@@ -37,21 +37,32 @@
 
 
 
+
 @namespace url("http://www.mozilla.org/keymaster/gatekeeper/there.is.only.xul"); 
 @namespace html url("http://www.w3.org/1999/xhtml"); 
 
 #palette-box {
-  overflow: auto; 
-  margin: 0px 15px 10px 15px;
+  overflow: auto;
+  display: block;
+  min-height: 3em;
 }
 
-#palette-box > hbox > toolbarpaletteitem {
-  padding-top: 8px;
-  padding-bottom: 8px;
+#palette-box > toolbarpaletteitem {
+  width: 110px;
+  height: 94px;
+  overflow: hidden;
+  display: inline-block;
 }
 
-#palette-box > hbox {
-  min-height: 8em;
+.toolbarpaletteitem-box {
+  -moz-box-pack: center;
+  -moz-box-flex: 1;
+  width: 110px;
+  max-width: 110px;
+}
+
+toolbarpaletteitem > label {
+  text-align: center;
 }
 
 #main-box > box {
